# Blocana

./: .gitignore  Cargo.toml  README.md
benches/: crypto_benchmarks.rs  storage_benchmarks.rs
docs/: roadmap.md  stage1-core-components.md  stage2-networking.md  stage3-consensus.md  stage4-security.md  stage5-smart-contracts.md  stage6-interfaces.md  stage7-optimizations.md
docs/api/: transaction-pool.md
docs/architecture/: stage1-architecture.md
docs/development/: coding-standards.md  developer-workflow.md
docs/implementation/: stage1-cryptography-guide.md  stage1-database-design.md  stage1-transaction-pool-implementation.md  transaction-pool-api-guide.md  transaction-pool-optimization.md
docs/milestones/: stage1-implementation-plan.md
docs/specifications/: stage1-technical-specs.md
docs/testing/: stage1-test-plan.md
examples/: blockchain_test.rs  detailed_transaction_errors.rs  transaction_detailed_errors.rs  transaction_pool.rs  transaction_pool_metrics.rs  transaction_replacement_example.rs
src/: block.rs  lib.rs  types.rs
src/consensus/: mod.rs  poet.rs
src/crypto/: mod.rs
src/network/: mod.rs
src/state/: mod.rs
src/storage/: block_store.rs  migration.rs  mod.rs  state_store.rs
src/transaction/: error.rs  metrics.rs  mod.rs  pool.rs
src/vm/: mod.rs
tests/: batch_transaction_tests.rs  pool_edge_cases.rs  pool_memory_optimization.rs  transaction_pool_metrics_tests.rs  transaction_replacement_tests.rs  transaction_tests.rs
weavernet/: .gitignore  Cargo.toml
weavernet/src/: main.rs
weavernet_client/: Cargo.toml
weavernet_client/src/: main.rs
weaverscan/backend/: .gitignore  package-lock.json  package.json
weaverscan/backend/src/: index.ts
weaverscan/frontend/: package.json  pnpm-lock.yaml
weaverscan/frontend/app/components/: Header.tsx
