[package]
name = "blocana"
version = "0.1.0"
edition = "2021"
authors = ["Encrypia Labs"]
description = "A lightweight blockchain optimized for IoT and edge computing"
readme = "README.md"
license = "MIT OR Apache-2.0"

# Library configuration
[lib]
name = "blocana"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "blocana"
path = "src/bin/main.rs"

[dependencies]
# Core dependencies
rand = "0.9.0"
log = "0.4.17"
env_logger = "0.11.7"
clap = "4.5.34"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
bincode = { version = "2.0.1", features = ["derive"] }
zeroize = "1.6.0"
serde-big-array = "0.5.1"  # Use hyphen here
thiserror = "2.0.12"

# Crypto
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
hmac = "0.12.1"           # Added for HMAC support
hex = "0.4.3"             # Añadir para mostrar hashes en formato hexadecimal

# Networking
libp2p = { version = "0.55.0", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "identify",    # Replacement for some functionality
    "ping",        # Basic network health
    "kad",         # For DHT functionality
    "gossipsub",   # For message propagation
    "websocket"    # Additional transport
]}
tokio = { version = "1.25.0", features = ["full"] }

# Storage
sled = "0.34.7"
rocksdb = "0.23.0"

# WASM (optional)
wasmer = { version = "5.0.4", optional = true }

[dev-dependencies]
criterion = "0.5.1"      # Added for additional benchmarking support
env_logger = "0.11.7"    # También se necesita en dev-dependencies
tempfile = "3.8.0"       # Add this line for temporary directories in tests

[features]
default = ["timestamp_index"]  # Incluye timestamp_index por defecto
timestamp_index = []           # Define la característica sin dependencias adicionales
smart-contracts = ["dep:wasmer"]  # Usa dep:wasmer para incluir la dependencia
wasmer = []                    # Las características existentes

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
debug = true
incremental = true

[[bench]]
name = "crypto_benchmarks"
harness = true

[[bench]]
name = "storage_benchmarks"
harness = true

[[example]]
name = "blockchain_test"
path = "examples/blockchain_test.rs"

[[example]]
name = "transaction_pool"
path = "examples/transaction_pool.rs"
